fix: habilitado wrap de líneas en el editor y corregido scroll horizontal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,23 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+/* Estilo para scrollbars al estilo VSCode */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3c3c3c;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #5a5a5a;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
